# Model_Development

./: Makefile  README.md  config.yml  custom_tracker.yaml  d2.yml  d3.yml  pyproject.toml  requirements.txt
models/best/: args.yaml  results.csv
models/lamp/: args.yaml  results.csv
models/vehicle/: args.yaml  results.csv
scripts/: 1_Data_Collection.ipynb  2_Post_Annotation_Cleaning.ipynb  3_Post_Augmentation_Cleaning.ipynb  4_Model_Evalutation.ipynb  Check_GPU.ipynb  background.py  copy-files.ps1  rename.py
svlm/: data.py  extract.py  main.py  model.py  yolo.py
svlm/utils/: config.py  image.py  lamp.py
tests/: test_image.py
uvsm/: data.py  main.py  yolo.py
uvsm/utils/: config.py
yolo_cam/: activations_and_gradients.py  base_cam.py  eigen_cam.py
yolo_cam/utils/: image.py  svd_on_activations.py
