[tool.poetry]
name = "svlm"
version = "0.1.0"
description = "Segment Vehicle and Lamp Model (SVLM) allows for the detection and segmentation of make-and-model-specific lamps to determine their state (on/off)."
authors = ["Kai <kaizhe@teleradio.com.sg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
albumentations = "1.4.6"
click = "8.1.7"
fiftyone = "0.23.8"
ultralytics = "8.2.10"
omegaconf = "2.3.0"
supervision = "0.20.0"
pycocotools = "2.0.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
target = ["test", "supervision"]
tests = ["B201", "B301", "B318", "B314", "B303", "B413", "B412", "B410"]
